recursion.cons.min.Min.scala.error
Compilation error:
Min:19: error: type mismatch;
 found   : List[Int]
 required: Int
      return(l.head::t.tail);
                   ^